<?xml version="1.0"?>
<package>
  <name>epos_driver</name>
  <version>0.0.7</version>
  <description>ROS driver for EPOS controller</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="tomasz.kucner@oru.se">Tomasz Kucner</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>GPL</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <url type="website">http://wiki.ros.org/epos_driver</url>
	

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="tomasz.kucner@oru.se">Tomasz Kucner</author>
  <author email="Martin.Magnusson@oru.se">Martin Magnusson</author>
  <author email="Hakan.Almqvist@oru.se">Hakan Almqvist</author>
  <author email="Hauser@ARI.Uni-Heidelberg.de">Marcus Hauser</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>tf</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
